# Auralis-bot

./: .dockerignore  .env-example  Dockerfile  README.md  config.py  docker-compose.yml  main.py  pyproject.toml  test_i18n.py
.github/workflows/: build-docker.yml
handlers/: __init__.py
handlers/user/: __init__.py  callback.py  message.py
keyboards/inline/: __init__.py  audio.py  lang.py  menu.py
locales/en/LC_MESSAGES/: main.ftl
locales/ru/: t.txt
locales/ru/LC_MESSAGES/: main.ftl
utils/: AudioEditStates.py  Track.py  __init__.py  audio_converte.py  audio_converter.py  audio_edit_states.py  audio_editer.py  audio_editor.py  edit_audio_tags.py  language_callback.py  track.py
