[project]
name = "auralis-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiogram>=3.29.1",
    "aiogram-i18n>=1.5",
    "audioop-lts>=0.2.2",
    "fluent-runtime>=0.4.0",
    "music-tag>=0.4.3",
    "mutagen>=1.48.1",
    "pydantic-settings>=2.14.2",
    "pydub>=0.25.1",
]
